hphp/hack/test/typecheck/function_pointer/simple_function_pointer_bad.php.exp
File "simple_function_pointer_bad.php", line 9, characters 6-6:
Invalid argument (Typing[4110])
File "simple_function_pointer_bad.php", line 3, characters 14-19:
Expected string
File "simple_function_pointer_bad.php", line 9, characters 6-6:
But got int
