hphp/hack/test/typecheck/function_pointer/simple_function_pointer_bad.php
<?hh

function foo(string $arg): void {
}

function test(): void {
  $x = foo<>;
  // Whoops, expects a string
  $x(4);
}
